www/_sass/components/_button.scss
$variants: 'primary', 'secondary', 'dark', 'light';

@mixin button-variantes($variants, $outline) {
  @each $variant in $variants {
    @if $outline {
      .c-button.c-button--#{$variant}-outline {
        color: var(--color-#{$variant});
        border-color: var(--color-#{$variant});

        &:hover,
        &:focus {
          background-color: var(--color-dark);
          color: var(--color-dark-with);
        }
      }
    } @else {
      .c-button.c-button--#{$variant} {
        color: var(--color-#{$variant}-with);
        background-color: var(--color-#{$variant});
        border-color: var(--color-#{$variant});

        &:hover,
        &:focus {
          border: var(--border);
        }
      }
    }
  }
}

.c-button {
  display: inline-flex;
  align-items: center;
  gap: var(--size-8);
  width: fit-content;
  padding: var(--size-8) var(--size-16);
  border: var(--border);
  border-color: transparent;
  border-radius: var(--size-32);
  text-decoration: none;
  color: var(--color-dark);
  font-weight: bold;
  font-size: 1.5rem;
  font-family: var(--font-family);

  &--active,
  &:hover {
    text-decoration: underline;
  }
}

@include button-variantes($variants, $outline: false);
@include button-variantes($variants, $outline: true);

.c-button--icon {
  padding: var(--size-8);
  border-radius: 50%;
  width: calc(var(--icon-size) + 2 * var(--size-8));
  height: calc(var(--icon-size) + 2 * var(--size-8));
  background: transparent;
  border-color: transparent;
  justify-content: center;

  .icon {
    width: var(--icon-size);
    height: var(--icon-size);
    fill: currentColor;
  }

  &:hover,
  &:focus {
    background-color: var(--color-dark);
    color: var(--color-dark-with);
    text-decoration: none;
  }
}

.c-button--fullwidth {
  display: flex;
  width: 100%;
  justify-content: center;
}

.c-button[disabled] {
  opacity: 0.8;
  cursor: not-allowed;
}

